[tool.poetry]
name = "alpaca-lightning"
version = "0.1.0"
description = ""
authors = ["Mun Hou Wong <munhou2022+github@gmail.com>"]
readme = "README.md"
packages = [{ include = "alpaca_lightning" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
lightning = "^2.0.0"
transformers = { git = "https://github.com/huggingface/transformers.git", branch = "main" }
sentencepiece = "^0.1.97"
fastapi = ">=0.80"
numba = "^0.56.4"
mlflow = "^2.2.2"
datasets = "^2.11.0"
torch = "^2.0.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.2"
black = { extras = ["jupyter"], version = "^23.3.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
